...
"common.value.minutes" = "%@ minutes";
"common.value.second" = "%@ second";
"common.value.seconds" = "%@ seconds";
"common.value.records" = "%@ records";

// MARK: Common button
"common.button.cancel" = "Cancel";

// MARK: TabItem
"tab_item.title.home" = "Home";
"tab_item.title.favorites" = "Favorites";
"tab_item.title.search" = "Search";
"tab_item.title.downloads" = "Downloads";
"tab_item.title.setting" = "Setting";

// MARK: ToolbarItem
"toolbar_item.button.filters" = "Filters";
"toolbar_item.button.jump_page" = "Jump page";
"toolbar_item.button.date_seek" = "Seek to date";
"toolbar_item.button.quick_search" = "Quick search";

// MARK: DateSeek
"date_seek_view.title.date_seek" = "Seek to date";
...
// MARK: SettingView
"setting_view.title.setting" = "Setting";
// SettingStateRoute
"enum.setting_state_route.value.account" = "Account";
"enum.setting_state_route.value.general" = "General";
"enum.setting_state_route.value.appearance" = "Appearance";
"enum.setting_state_route.value.reading" = "Reading";
"enum.setting_state_route.value.download" = "Download";
"enum.setting_state_route.value.laboratory" = "Laboratory";
"enum.setting_state_route.value.about" = "About";

// MARK: AccountSettingView
"account_setting_view.title.account" = "Account";
...
"detail_view.button.download_get" = "GET";
"detail_view.button.download_wait" = "WAIT";
"detail_view.button.download_done" = "DONE";
"detail_view.button.download_update" = "UPDATE";
"detail_view.button.download_retry" = "RETRY";
"detail_view.button.download_repair" = "REPAIR";
"detail_view.button.read" = "Read";
"detail_view.button.post_comment" = "Post comment";
"detail_view.accessibility.download_button.login" = "Log in to download";
"detail_view.accessibility.download_button.download" = "Download";
"detail_view.accessibility.download_button.queued" = "Queued";
"detail_view.accessibility.download_button.downloading" = "Downloading %d of %d";
"detail_view.accessibility.download_button.downloaded" = "Delete downloaded gallery";
...
"detail_view.accessibility.download_button.retry" = "Retry download";
"detail_view.accessibility.download_button.repair" = "Repair download";
"detail_view.accessibility.download_button.preparing" = "Preparing download";
"detail_view.accessibility.download_button.pause_action" = "Pause download";
"detail_view.accessibility.download_button.paused" = "Resume download. Paused at %d of %d";
"detail_view.accessibility.download_button.partial" = "Retry download. %d of %d pages are already available.";
"detail_view.toolbar_item.button.archives" = "Archives";
"detail_view.toolbar_item.button.torrents" = "Torrents";
"detail_view.toolbar_item.button.share" = "Share";
"detail_view.context_menu.button.detail" = "Detail";
"detail_view.context_menu.button.withdraw_vote" = "Withdraw vote";
"detail_view.context_menu.button.vote_up" = "Vote up";
"detail_view.context_menu.button.vote_down" = "Vote down";
"detail_view.description_section.title.favorited" = "Favorited";
"detail_view.description_section.title.language" = "Language";
...
