...
    SubSection(title: "Popular", showAll: false, isLoading: true, reloadAction: {}) {
        Text(verbatim: "Content")
    }
}

#Preview("Accessibility size") {
    SubSection(title: "Quick Search", reloadAction: {}) {
        Text(verbatim: "Content")
    }
    .environment(\.dynamicTypeSize, .accessibility5)
}

